<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.OrderDetailsActivity">

    <TextView
        style="@style/SecondaryText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/card_order_id" />

    <TextView
        style="@style/SecondaryText"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_date"
        app:layout_constraintStart_toStartOf="@+id/tv_order_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_id" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="30dp"
        android:id="@+id/cv_order_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_order_date"
        app:layout_constraintStart_toStartOf="@id/tv_order_date">

        <ImageView
            android:id="@+id/iv_order_preview"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_noodles"/>

    </androidx.cardview.widget.CardView>


    <TextView
        style="@style/PrimaryText"
        android:layout_marginStart="20dp"
        android:id="@+id/tv_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chicken Noodles"
        app:layout_constraintStart_toEndOf="@+id/cv_order_preview"
        app:layout_constraintTop_toTopOf="@+id/cv_order_preview" />

    <TextView
        style="@style/SecondaryText"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_order_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_order_count"
        app:layout_constraintStart_toStartOf="@+id/tv_order_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_title" />

    <TextView
        style="@style/SecondaryText"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_order_sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹270"
        app:layout_constraintStart_toStartOf="@+id/tv_order_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_count" />

    <TextView
        style="@style/MediumText"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_delivered_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_order_delivery_time"
        app:layout_constraintStart_toStartOf="@+id/cv_order_preview"
        app:layout_constraintTop_toBottomOf="@+id/cv_order_preview" />

    <TextView
        android:layout_marginTop="30dp"
        style="@style/PrimaryText"
        android:id="@+id/tv_title_delivery_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        app:layout_constraintStart_toStartOf="@+id/tv_delivered_at"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivered_at" />

    <TextView
        style="@style/SecondaryText"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_delivery_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="99, Residency Rd, Shanthala Nagar, Ashok Nagar, Bengaluru, Karnataka 560025"
        app:layout_constraintStart_toStartOf="@+id/tv_title_delivery_address"
        app:layout_constraintTop_toBottomOf="@id/tv_title_delivery_address" />

    <TextView
        style="@style/PrimaryText"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_title_order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        app:layout_constraintStart_toStartOf="@+id/tv_delivery_address"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery_address" />

    <TextView
        style="@style/MediumText"
        android:layout_marginTop="10dp"
        android:id="@+id/title_sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_total"
        app:layout_constraintStart_toStartOf="@+id/tv_title_order_summary"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_order_summary" />

    <TextView
        style="@style/MediumText"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_title_taxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxes"
        app:layout_constraintTop_toBottomOf="@id/title_sub_total"
        app:layout_constraintStart_toStartOf="@id/title_sub_total"/>

    <TextView
        style="@style/MediumText"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_title_delivery_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_fee"
        app:layout_constraintStart_toStartOf="@+id/tv_title_taxes"
        app:layout_constraintTop_toBottomOf="@id/tv_title_taxes" />

    <TextView
        style="@style/PrimaryText"
        android:id="@+id/tv_title_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="@id/tv_title_delivery_fee"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_delivery_fee" />

    <TextView
        style="@style/MediumText"
        android:id="@+id/tv_sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="₹270"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_sub_total" />

    <TextView
        android:id="@+id/tv_taxes"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹17"
        app:layout_constraintEnd_toEndOf="@id/tv_sub_total"
        app:layout_constraintTop_toTopOf="@id/tv_title_taxes" />

    <TextView
        style="@style/MediumText"
        android:id="@+id/tv_delivery_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹40"
        app:layout_constraintTop_toTopOf="@id/tv_title_delivery_fee"
        app:layout_constraintEnd_toEndOf="@id/tv_taxes"/>

    <TextView
        style="@style/PrimaryText"
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹327"
        app:layout_constraintTop_toTopOf="@id/tv_title_total"
        app:layout_constraintEnd_toEndOf="@id/tv_delivery_fee"/>


    <Button
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/btn_track_order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/track_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_medium"
        android:background="@drawable/rounded_track_button"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>