<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="17dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            android:id="@+id/cv_order_preview"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_order_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"/>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/PrimaryText"
            android:layout_marginStart="20dp"
            android:id="@+id/tv_order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chicken Noodles"
            app:layout_constraintStart_toEndOf="@+id/cv_order_preview"
            app:layout_constraintTop_toTopOf="@+id/cv_order_preview" />

        <TextView
            style="@style/SecondaryText"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_order_id"
            app:layout_constraintStart_toStartOf="@+id/tv_order_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_name" />

        <TextView
            style="@style/SecondaryText"
            android:id="@+id/tv_order_sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_paid"
            app:layout_constraintStart_toStartOf="@+id/tv_order_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_id" />
        
        <TextView
            style="@style/SecondaryText"
            android:id="@+id/tv_delivered_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_to_be_delivered"
            app:layout_constraintTop_toBottomOf="@id/tv_order_sub_total"
            app:layout_constraintStart_toStartOf="@id/tv_order_sub_total"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>