<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_track_order"
    tools:context=".presentation.track.TrackOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-40dp"
            android:layout_weight="1"
            map:uiCompass="false" />

        <androidx.cardview.widget.CardView
            android:id="@+id/bottom_sheet_dialog"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginBottom="-60dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bottom_sheet_title"
                    style="@style/PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/your_order_is_on_the_way"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_delivered_at"
                    style="@style/SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/approximate_time_of_delivery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bottom_sheet_title" />

                <TextView
                    android:id="@+id/tv_delivered_at"
                    style="@style/PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="4:30 PM"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_delivered_at" />


                <ImageView
                    android:id="@+id/iv_first_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/passed_step"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_delivered_at" />

                <View
                    android:id="@+id/line_first_step"
                    android:layout_width="2dp"
                    android:layout_height="70dp"
                    android:background="@color/unpassed_step"
                    app:layout_constraintEnd_toEndOf="@+id/iv_first_step"
                    app:layout_constraintStart_toStartOf="@id/iv_first_step"
                    app:layout_constraintTop_toBottomOf="@+id/iv_first_step" />

                <ImageView
                    android:id="@+id/iv_second_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/unpassed_step"
                    app:layout_constraintEnd_toEndOf="@+id/line_first_step"
                    app:layout_constraintStart_toStartOf="@+id/line_first_step"
                    app:layout_constraintTop_toBottomOf="@id/line_first_step" />

                <View
                    android:id="@+id/line_second_step"
                    android:layout_width="2dp"
                    android:layout_height="70dp"
                    android:background="@color/unpassed_step"
                    app:layout_constraintEnd_toEndOf="@+id/iv_second_step"
                    app:layout_constraintStart_toStartOf="@+id/iv_second_step"
                    app:layout_constraintTop_toBottomOf="@id/iv_second_step" />

                <ImageView
                    android:id="@+id/iv_third_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/unpassed_step"
                    app:layout_constraintEnd_toEndOf="@+id/line_second_step"
                    app:layout_constraintStart_toStartOf="@+id/line_second_step"
                    app:layout_constraintTop_toBottomOf="@id/line_second_step" />


                <TextView
                    android:id="@+id/tv_status_ordered"
                    style="@style/OrderStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/status_ordered"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_first_step"
                    app:layout_constraintStart_toEndOf="@+id/iv_first_step"
                    app:layout_constraintTop_toTopOf="@+id/iv_first_step" />

                <TextView
                    android:id="@+id/tv_status_ordered_time"
                    style="@style/OrderStatusTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:30, 7 Feb 2024"
                    app:layout_constraintStart_toStartOf="@+id/tv_status_ordered"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_ordered" />

                <TextView
                    android:id="@+id/tv_status_packed"
                    style="@style/OrderStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/status_packed"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_second_step"
                    app:layout_constraintStart_toEndOf="@+id/iv_second_step"
                    app:layout_constraintTop_toBottomOf="@+id/line_first_step" />

                <TextView
                    android:id="@+id/tv_status_packed_time"
                    style="@style/OrderStatusTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_packed_yet"
                    app:layout_constraintStart_toStartOf="@+id/tv_status_packed"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_packed" />

                <TextView
                    android:id="@+id/tv_status_delivered"
                    style="@style/OrderStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/status_delivered"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_third_step"
                    app:layout_constraintStart_toEndOf="@+id/iv_third_step"
                    app:layout_constraintTop_toTopOf="@+id/iv_third_step" />

                <TextView
                    android:id="@+id/tv_status_delivered_at"
                    style="@style/OrderStatusTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_delivered_yet"
                    app:layout_constraintStart_toStartOf="@+id/tv_status_delivered"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_delivered" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>